--- a/heart-particles-v2.html
+++ b/heart-particles-v2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heart partivle version2</title>
-    <!-- credits to the writter "@tommyho" follow him on 👉 https://codepen.io/tommyho -->
-    <style>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Partículas em Coração - Versão 2</title>
+  <!-- créditos para: https://github.com/cryptitys -->
+  <style>
       body {
         margin: 0;
         padding: 0;
@@ -150,36 +150,36 @@
   </head>
   <body>
     <div id="controls-container">
-      <button id="toggle-controls">Controls</button>
-      <button id="toggle-fullscreen">Full Screen</button>
+      <button id="toggle-controls">Controles</button>
+      <button id="toggle-fullscreen">Tela Cheia</button>
       <div id="controls">
         <div class="control-group">
-          <label for="colorScheme">Colors:</label>
+          <label for="colorScheme">Cores:</label>
           <select id="colorScheme">
-            <option value="rainbow">Rainbow</option>
-            <option value="red">Red</option>
-            <option value="green">Green</option>
-            <option value="blue">Blue</option>
-            <option value="monochrome">Monochrome</option>
+            <option value="rainbow">Arco-Íris</option>
+            <option value="red">vermelho</option>
+            <option value="green">verde</option>
+            <option value="blue">Azul</option>
+            <option value="monochrome">Monocromado</option>
           </select>
         </div>
         <div class="control-group">
-          <label for="particleSize">Size:</label>
+          <label for="particleSize">Tamanho:</label>
           <input type="range" id="particleSize" min="1" max="20" value="10">
           <span id="particleSizeValue">10</span>
         </div>
         <div class="control-group">
-          <label for="particleCount">Particles:</label>
+          <label for="particleCount">Particulas:</label>
           <input type="range" id="particleCount" min="10" max="100" value="32">
           <span id="particleCountValue">32</span>
         </div>
         <div class="control-group">
-          <label for="speed">Speed:</label>
+          <label for="speed">Velocidade</label>
           <input type="range" id="speed" min="0.1" max="2" step="0.1" value="1">
           <span id="speedValue">1</span>
         </div>
         <div class="control-group">
-          <label for="mouseInfluence">Mouse Follow:</label>
+          <label for="mouseInfluence">Mouse Efeito:</label>
           <input type="range" id="mouseInfluence" min="0" max="100" value="50">
           <span id="mouseInfluenceValue">50</span>
         </div>
